--- a/Aural.xcodeproj/xcshareddata/xcschemes/Aural.xcscheme
+++ b/Aural.xcodeproj/xcshareddata/xcschemes/Aural.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C817133C2EF39FFE00831434"
+               BuildableName = "AuralTests.xctest"
+               BlueprintName = "AuralTests"
+               ReferencedContainer = "container:Aural.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
