--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,13 @@ DerivedData/
 *.xcuserstate
 *.DS_Store
 
+# Build artifacts and logs
+build.log
+Data/
+Info.plist
+*.xcresult
+Test Results/
+
 ## macOS specific
 .DS_Store
 .AppleDouble
