--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Xcode 16
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.1'
+          xcode-version: '16.0'
 
       - name: Show Xcode Version
         run: xcodebuild -version
@@ -35,6 +35,7 @@ jobs:
         run: xcodebuild -resolvePackageDependencies
 
       - name: Run Tests
+        timeout-minutes: 20
         run: |
           xcodebuild test \
             -project Aural.xcodeproj \
@@ -42,6 +43,8 @@ jobs:
             -destination 'platform=macOS,arch=arm64' \
             -enableCodeCoverage YES \
             -resultBundlePath TestResults.xcresult \
+            -parallel-testing-enabled NO \
+            -jobs 2 \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO
 
@@ -61,7 +64,7 @@ jobs:
       - name: Set up Xcode 16
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.1'
+          xcode-version: '16.0'
       
       - name: Build Release
         run: |
@@ -69,5 +72,6 @@ jobs:
             -scheme Aural \
             -configuration Release \
             -destination 'platform=macOS' \
+            -jobs 2 \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO
